# nccl-cmake

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/skills/eugo-build-and-test/: SKILL.md
.claude/skills/eugo-cmake-review/: SKILL.md
.claude/skills/eugo-rebuild/: SKILL.md
.claude/skills/eugo-upstream-merge/: SKILL.md
.claude/skills/eugo-upstream-merge-reference/: SKILL.md
.github/: copilot-instructions.md
__deleteme/: NCCL_ENV_VARS.md  STWT_INVESTIGATION.md  TODO.md  nccl_graph.xml  nccl_topo.xml
__deleteme/stage_1/: __environment_variables.md
__deleteme/stage_2/: NCCL_ENV_VARS.md  NCCL_ENV_VARS_INTERACTIONS.tsv  NCCL_ENV_VARS_MATRIX.tsv  NCCL_ENV_VARS_SHORTLIST.md  README.md  nccl.conf.aws_efa  nccl.conf.g5g  nccl.conf.grace_gb10  validate_nccl_conf.sh
__deleteme/tests/: our_symbols.txt  pypi_symbols.txt  stwt_clang_test.cu  stwt_intrinsic_test.cu  test_stwt_clang.sh
ir/: CMakeLists.txt
src/: CMakeLists.txt
src/device/: generate.py
src/device/symmetric/: generate.py
src/gin/: CMakeLists.txt
src/include/: nvmlwrap.h
src/include/compiler/: gcc.h
src/include/nccl_device/gin/proxy/: gin_proxy.h
src/include/nccl_device/impl/: ll_a2a__funcs.h  lsa_barrier__funcs.h  ptr__funcs.h
src/misc/: CMakeLists.txt  param.cc
src/nccl_device/: CMakeLists.txt
src/os/: CMakeLists.txt
src/plugin/: CMakeLists.txt
src/plugin/env/: CMakeLists.txt
src/plugin/profiler/: CMakeLists.txt
src/ras/: CMakeLists.txt
src/rma/: CMakeLists.txt
src/scheduler/: CMakeLists.txt
src/transport/: CMakeLists.txt
src/transport/net_ib/: CMakeLists.txt
src/transport/net_ib/gdaki/: CMakeLists.txt  gin_host_gdaki.cc
